--- a/src/pages/ga.astro
+++ b/src/pages/ga.astro
@@ -1,13 +1,14 @@
 ---
 import Header from "../components/Header.astro"
 import Footer from "../components/Footer.astro"
-import SearchBar from "../components/SearchBar.astro"
+import Game from "../components/Game.astro"
 ---
 
 <html>
 <Header />
 <Footer />
-<SearchBar />
+<Game />
+
 </html>
 <style>
 	body {
