--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import SearchBar from "../components/SearchBar.astro"
 ---
 
 <html>
+<script src="/config.js" is:inline></script>
 <Header />
 <Footer />
 <SearchBar />
