--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,26 @@
 <script src="/config.js" is:inline></script>
 
-<header class="header">
-    <a class="header_link" href="/">Home</a>
-    <a class="header_link" onclick="location.href=htmlConfig.gamesPath">Gam<x>e</x>s</a>
-    <a class="header_link" onclick="location.href=htmlConfig.appsPath">Apps</a>
+<header class="header" >
+    <a class="header_home" href="/"><img src="/assets/img/home.png" height="2%" width="2%"></img></a>
+    <a class="header_link" onclick="location.href=htmlConfig.gamesPath"id="link_games">
+        <img src="/assets/img/game.png" height="2%" width="2%"></img>
+    </a>
+    <a class="header_link" onclick="location.href=htmlConfig.appsPath"><img src="/assets/img/apps.png" height="2%" width="2%"></img></a>
+    <a class="footer_link" onclick="location.href=htmlConfig.settingsPath"><img src="/assets/img/settings.png" height="2%" width="2%"></img></a>
 </header>
 
 
 <style>
+/**Thanks nobodycares_io for the css (im terrible at making this look decent)*/
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+      font-family: "Be Vietnam Pro", sans-serif;
+}
+
+.header_home { 
+    margin-right: 40vw;
+    color: white;
+}
 .header {
     font-family: Helvetica, sans-serif, Arial;
     position: fixed;
@@ -18,18 +31,14 @@
     padding: 1rem;
     top: 0;
     z-index: 20;
+    align-items: center;
 }
-
 .header_link {
     color: white;
-    margin-right: 5rem;
-    margin-left: 5rem; 
     text-decoration: none;
-    padding: 1rem 1rem;
     border-radius: 5rem;
-}
-
-.header_link:hover {
-    background-color: rgb(65, 65, 65);
+    margin-left: 1rem;
+    margin-right: 1rem;
+    cursor: pointer;
 }
 </style>
