made settings and probably alot of other stuff, settings is unimplemented atm

--- a/src/pages/ga.astro
+++ b/src/pages/ga.astro
@@ -8,7 +8,7 @@ import Game from "../components/Game.astro"
 <Header />
 <Footer />
 <Game /> 
-
+<script src="assets/js/ads.js" is:inline></script>
 </html>
 <style>
 	body {
