--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,37 @@ import SearchBar from "../components/SearchBar.astro"
 ---
 
 <html>
+<link rel="icon" type="image/png" href="https://ssl.gstatic.com/classroom/favicon.png">
+<script src="assets/js/ads.js" is:inline></script>
+
+<!--Start google analytics-->
+
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VXDP7XC98T"></script>
+<script is:inline>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VXDP7XC98T');
+</script>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PZXRTFX5');</script>
+</head>
+<body>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PZXRTFX5"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+</body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VXDP7XC98T"></script>
+
+<!--End google analytics-->
+
+
+
+
 <script src="/config.js" is:inline></script>
 <Header />
 <Footer />
