--- a/src/pages/search_gateway.astro
+++ b/src/pages/search_gateway.astro
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="assets/js/ads.js" is:inline></script>
     <script src="/chemical.js" is:inline></script>
     <title>Classes</title>
 
