--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import SearchBar from "../components/SearchBar.astro"
 
 <html>
 <link rel="icon" type="image/png" href="https://ssl.gstatic.com/classroom/favicon.png">
+<title>Classes</title> 
 <script src="assets/js/ads.js" is:inline></script>
 
 <!--Start google analytics-->
@@ -37,6 +38,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <script src="/config.js" is:inline></script>
+<script src="/assets/js/onload_home.js" is:inline type="module"></script>
 <Header />
 <Footer />
 <SearchBar />
